<resources>
    <string name="app_name">Briar Mailbox</string>
    <string name="notification_channel_name">Briar Mailbox Channel</string>
    <string name="notification_mailbox_title_starting">Mailbox starting</string>
    <string name="notification_mailbox_content_starting">Starting mailbox…</string>
    <string name="notification_mailbox_title_setup">Setting up Mailbox</string>
    <string name="notification_mailbox_content_setup">Waiting for Briar to scan QR code…</string>
    <string name="notification_mailbox_title_running">Briar Mailbox running</string>
    <string name="notification_mailbox_content_running">Waiting for messages…</string>
    <string name="notification_mailbox_title_offline">Briar Mailbox offline</string>
    <string name="notification_mailbox_content_offline">Waiting for internet connection…</string>
    <string name="notification_mailbox_content_clock_skew">Waiting for correct system clock…</string>
    <string name="button_continue">Continue</string>
    <string name="button_skip_intro">Skip Intro</string>
    <string name="button_back">Back</string>

    <string name="onboarding_0_title">Stay Reachable</string>
    <string name="onboarding_0_description">The Mailbox helps you to stay in touch with your contacts and synchronizes your messages to Briar.</string>
    <string name="onboarding_1_title">Use a spare device</string>
    <string name="onboarding_1_description">Install the Mailbox app on a spare phone or tablet and leave it connected to power and WiFi.</string>
    <string name="onboarding_2_title">Message delivery</string>
    <string name="onboarding_2_description">When your Mailbox is online, your contacts can leave messages for you even if your Briar is offline. The Mailbox will receive the messages, and forward them to Briar when you come online.</string>
    <string name="onboarding_3_title">Encrypted</string>
    <string name="onboarding_3_description">Messages going through the Mailbox are encrypted and cannot be read by the Mailbox or this phone. The Mailbox simply forwards them to your Briar Messenger phone.</string>

    <!-- TODO: We might want to copy string from don't kill me lib,
          so translation memory can auto-translate most of them. -->
    <string name="warning_dozed">Briar Mailbox was unable to run in the background</string>
    <string name="fix">Fix</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="copied">Copied</string>

    <string name="link_title">Link via QR code</string>
    <string name="link_description">Scan this QR code with Briar</string>
    <string name="link_menu_title">Show as text</string>
    <string name="link_text_title">Link via text</string>
    <string name="link_text_description">Copy this and paste it into Briar Desktop:</string>
    <string name="link_cancel">Cancel Setup</string>

    <string name="startup_headline">Starting Mailbox</string>
    <string name="startup_init_app">Initializing app</string>
    <!-- The number placeholder will be replaced with a percentage, e.g. 50 -> (50%) -->
    <string name="startup_bootstrapping_tor">Connecting to the Tor network (%d%%)</string>
    <string name="startup_publishing_onion_service">Publishing the Tor onion service</string>

    <string name="clock_skew_title">Wrong system clock</string>
    <string name="clock_skew_description">Check your time, timezone, and date in system settings. After fixing, wait some time for Tor to recover.</string>

    <string name="no_network_title">Device offline?</string>
    <string name="no_network_description">Please ensure this device is online and connected to the Internet. Once you\'re online, setup should pick up automatically here.</string>

    <string name="status_running">Mailbox is running</string>
    <string name="last_connection">Last connection: %s</string>
    <string name="now">now</string>
    <string name="never">never</string>
    <string name="stop">Stop</string>
    <string name="unlink">Unlink</string>
    <string name="unlink_title">Unlink mailbox?</string>
    <string name="unlink_description">If you unlink your Mailbox, you won\'t be able to receive messages while Briar is offline.\n\nAre you sure you want to unlink your Mailbox?</string>
    <string name="confirm_stop_title">Stop Mailbox?</string>
    <string name="confirm_stop_description">When you stop your Mailbox, the app will shut down and it will stop receiving messages until you open the app again.\n\nAny messages that have already been received will be saved. Briar will be able to collect them when you reopen the Mailbox app.</string>

    <string name="setup_complete_title">Connected</string>
    <string name="setup_complete_description">Your Mailbox has been successfully linked with Briar.\n\nKeep your Mailbox connected to power and Wi-Fi so it\'s always online.</string>
    <string name="setup_complete_finish">Finish</string>

    <string name="stopping">Stopping Mailbox…</string>

    <string name="wipe_wiping">Wiping Mailbox…</string>
    <string name="wipe_complete_title">Wiping complete</string>
    <string name="wipe_complete_description">Next time you have access to your Briar device, please open the Mailbox settings screen in the Briar app, then tap the \"Unlink\" button to complete the process.</string>

    <string name="sorry">Sorry</string>
    <string name="activity_not_found">No app found for this action</string>
    <string name="startup_failed_activity_title">Mailbox Startup Failure</string>
    <string name="startup_failed_service_error">Mailbox was unable to start a required component.\n\nPlease upgrade to the latest version of the app and try again.</string>
    <string name="startup_failed_lifecycle_reuse">Mailbox has already stopped.\n\nPlease close the app and try again.</string>
    <string name="startup_failed_clock_error">Mailbox was unable to start because your device\'s clock is wrong.\n\nPlease set your device\'s clock to the right time and try again.</string>

    <!-- Preference -->
    <string name="prefs_title">Settings</string>
    <string name="prefs_tor_category_title">Tor circumvention settings</string>
    <string name="prefs_tor_auto_title">Automatic bridge selection</string>
    <string name="prefs_tor_auto_summary">Bridges are chosen based on your location</string>
    <string name="prefs_tor_bridges_title">Use bridges</string>
    <string name="prefs_bridges_category_title">Bridge types</string>
    <string name="prefs_bridges_snowflake_title" translatable="false">Snowflake</string>
    <string name="prefs_bridges_vanilla_title" translatable="false">Vanilla</string>
    <string name="prefs_bridges_obfs4_title" translatable="false">Obfs4</string>
    <string name="prefs_bridges_obfs_builtin_title">Obfs4 from Tor Browser</string>
    <string name="prefs_bridges_meek_title" translatable="false">Meek</string>
    <string name="prefs_bridges_at_least_one">At least one bridge type must be enabled, or disable \"Use bridges\".</string>

</resources>
