<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/prefs_tor_category_title">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:disableDependentsState="true"
            app:iconSpaceReserved="false"
            app:key="pref_auto"
            app:summary="@string/prefs_tor_auto_summary"
            app:title="@string/prefs_tor_auto_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:dependency="pref_auto"
            app:iconSpaceReserved="false"
            app:key="pref_use_bridges"
            app:title="@string/prefs_tor_bridges_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/prefs_bridges_category_title">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:dependency="pref_use_bridges"
            app:iconSpaceReserved="false"
            app:key="pref_bridges_snowflake"
            app:title="@string/prefs_bridges_snowflake_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:dependency="pref_use_bridges"
            app:iconSpaceReserved="false"
            app:key="pref_bridges_meek"
            app:title="@string/prefs_bridges_meek_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:dependency="pref_use_bridges"
            app:iconSpaceReserved="false"
            app:key="pref_bridges_obfs4"
            app:title="@string/prefs_bridges_obfs4_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:dependency="pref_use_bridges"
            app:iconSpaceReserved="false"
            app:key="pref_bridges_obfs_builtin"
            app:title="@string/prefs_bridges_obfs_builtin_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:dependency="pref_use_bridges"
            app:iconSpaceReserved="false"
            app:key="pref_bridges_vanilla"
            app:title="@string/prefs_bridges_vanilla_title" />

    </PreferenceCategory>

</PreferenceScreen>
